--- a/website/category.html
+++ b/website/category.html
@@ -145,7 +145,7 @@
           </div>
         </div>
         <!-- The products section -->
-        <div class="col-12 col-md-9">    <!-- One breakpoint (One layout for Extra small, Small; One layout for Medium, Large, Extra large )-->
+        <div class="col-12 col-md-9 mb-5">    <!-- One breakpoint (One layout for Extra small, Small; One layout for Medium, Large, Extra large )-->
           <h2><strong>Birthday flowers</strong></h2>
           <!-- Bootstrap pagination -->
           <nav class= "mt-3" aria-label="...">
