--- a/website/index.html
+++ b/website/index.html
@@ -36,7 +36,7 @@
         <div class="row">
           <!-- Logo and tagline on the left grid -->
           <div class="col-12 col-md-5">      <!-- 1 column for xs and small, 2 columns(5/12, 7/12) for medium, large, xl -->
-            <a href="#"><img src="./images/logo2org.jpg" class="img-fluid" alt=""></a>
+            <a href="index.html"><img src="./images/logo2org.jpg" class="img-fluid" alt=""></a>
             <p style="font-size: 90%"><em>ARTISAN FLOWER ARRANGEMENTS YOU WILL LOVE</em></p>
           </div>
           <!-- Contact details and the search on the right grid -->
