--- a/website/index.html
+++ b/website/index.html
@@ -61,13 +61,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#">Home</a>
+              <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About Us</a>
+              <a class="nav-link" href="aboutus.html">About Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Buy online</a>
+              <a class="nav-link" href="category.html">Buy online</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Weddings</a>
