--- a/category.html
+++ b/category.html
@@ -36,7 +36,7 @@
         <div class="row">
           <!-- Logo and tagline on the left grid -->
           <div class="col-12 col-md-5">
-            <a href="#"><img src="./images/logo2org.jpg" class="img-fluid" alt=""></a>
+            <a href="index.html"><img src="./images/logo2org.jpg" class="img-fluid" alt=""></a>
             <p style="font-size: 90%"><em>ARTISAN FLOWER ARRANGEMENTS YOU WILL LOVE</em></p>
           </div>
           <!-- Contact details and the search on the right grid -->
@@ -61,13 +61,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#">Home</a>
+              <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About Us</a>
+              <a class="nav-link" href="aboutus.html">About Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Buy online</a>
+              <a class="nav-link" href="category.html">Buy online</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Weddings</a>
@@ -145,7 +145,7 @@
           </div>
         </div>
         <!-- The products section -->
-        <div class="col-12 col-md-9">    <!-- One breakpoint (One layout for Extra small, Small; One layout for Medium, Large, Extra large )-->
+        <div class="col-12 col-md-9 mb-5">    <!-- One breakpoint (One layout for Extra small, Small; One layout for Medium, Large, Extra large )-->
           <h2><strong>Birthday flowers</strong></h2>
           <!-- Bootstrap pagination -->
           <nav class= "mt-3" aria-label="...">
